# AetherLink

./: .gitignore  Cargo.toml  README.md  downloader_bot.py
apps/android/: settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/gradle/: libs.versions.toml
apps/android/gradle/wrapper/: gradle-wrapper.properties
apps/desktop/: package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: DeviceCard.tsx  Sidebar.tsx  TopBar.tsx
apps/desktop/src/layouts/: MainLayout.tsx
apps/desktop/src/pages/: Clipboard.tsx  Dashboard.tsx  DeviceDetails.tsx  FileExplorer.tsx  Notifications.tsx
apps/desktop/src/router/: index.tsx
apps/desktop/src/services/: tauri.ts
apps/desktop/src/store/: appStore.ts
apps/desktop/src/types/: device.ts  (+1 more)
crates/ai/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: connection.rs  device.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: api.rs  app.rs  config.rs  device_manager.rs  error.rs  event.rs  lib.rs  logging.rs  registry.rs  service.rs  state.rs
crates/core/src/commands/: device.rs
crates/crypto/: Cargo.toml
crates/database/: Cargo.toml
crates/device/: Cargo.toml
crates/device/src/: adb.rs  device.rs  file.rs  file_service.rs  info.rs  lib.rs  manager.rs  service.rs  state.rs
crates/network/: Cargo.toml
crates/plugin/: Cargo.toml
crates/protocol/: Cargo.toml
crates/streaming/: Cargo.toml
crates/sync/: Cargo.toml
(+20 files in other folders)
