[workspace]
resolver = "2"

members = [
    "apps/desktop/src-tauri",

    "crates/common",
    "crates/core",
    "crates/device",
    "crates/network",
    "crates/database",
    "crates/crypto",
    "crates/protocol",
    "crates/plugin",
    "crates/sync",
    "crates/streaming",
    "crates/ai",
]

[workspace.package]
edition = "2024"
license = "MIT"
authors = ["Revanth H M"]
repository = "https://github.com/Rev0nix/AetherLink"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }